[package]
name = "fibers_global"
version = "0.1.2"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "The global executor of fibers"
homepage = "https://github.com/sile/fibers_global"
repository = "https://github.com/sile/fibers_global"
readme = "README.md"
license = "MIT"
edition = "2018"

[badges]
travis-ci = {repository = "sile/fibers_global"}
codecov = {repository = "sile/fibers_global"}

[dependencies]
fibers = "0.1"
futures = "0.1"
lazy_static = "1"
num_cpus = "1"
